# test-son8template

./: CMakeLists.txt
testing/: CMakeLists.txt
testing/msvc/: __cplusplus.cxx
